chore: switched to some semantic html

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           </ul>
         </nav>
       </header>
-      <div class="content">
-        <div class="welcome-section">
+      <main class="content">
+        <section class="welcome-section">
           <div class="intro">
             <h1>The premier after-school enrichment program for K-12</h1>
             <div>
@@ -68,8 +68,8 @@
             </button>
           </div>
           <img src="/main.png" class="main-image" />
-        </div>
-      </div>
+        </section>
+      </main>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
