program section done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/fpj1mes.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beestar.org - Redesign</title>
-    <!-- import CSS styles -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -57,17 +56,193 @@
       <main class="content">
         <section class="welcome-section">
           <div class="intro">
-            <h1>The premier after-school enrichment program for K-12</h1>
-            <div>
-              Beestar helps thousands of students achieve outstanding grades
-              using its curriculum-based programs for just 20 minutes a week.
+            <div class="intro-content">
+              <h1>The premier after-school enrichment program for K-12</h1>
+              <div>
+                Beestar helps thousands of students achieve outstanding grades
+                using its curriculum-based programs for just 20 minutes a week.
+              </div>
+              <button>
+                Spring 2024 programs are open!
+                <img src="/right_arrow.svg" />
+              </button>
             </div>
-            <button>
-              Spring 2024 programs are open, register today!
-              <img src="/right_arrow.svg" />
-            </button>
           </div>
           <img src="/main.png" class="main-image" />
+        </section>
+        <section class="program-section">
+          <div class="sidebar-bg"></div>
+          <div class="program-bg"></div>
+          <div class="section-content">
+            <div class="sidebar-content">
+              <h2>Programs</h2>
+              <button class="clicked">Language Arts</button>
+              <button>Math</button>
+              <button>Science</button>
+              <button>Computer Science</button>
+              <button>Social Studies</button>
+              <button>Vocabulary</button>
+              <button>GT Math</button>
+              <button>National Competition</button>
+            </div>
+            <div class="program-content">
+              <div class="program-intro">
+                <h1>Language Arts</h1>
+                <div class="description">
+                  Through Beestar's ELA program, students will be provided with
+                  a comprehensive and structured approach to developing language
+                  and literary skills in four main areas: reading, writing,
+                  speaking and listening, and language arts.
+                </div>
+              </div>
+              <div class="grades">
+                <div class="grade-card">
+                  <div class="grade-num" id="red">1</div>
+                  <div class="right-content">
+                    <div class="text">
+                      <h3>First Grade</h3>
+                      <div class="description">
+                        use simple words, infer from text, recall details,
+                        understand words by context, identify beginning and
+                        ending sound
+                      </div>
+                    </div>
+                    <div class="grade-buttons">
+                      <button class="red">Curriculum</button>
+                      <button class="red">Sample Exercises</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="grade-card">
+                  <div class="grade-num" id="yellow">2</div>
+                  <div class="right-content">
+                    <div class="text">
+                      <h3>Second Grade</h3>
+                      <div class="description">
+                        recall details, compose sentences, basic grammar usage,
+                        match word sounds, support conclusions, identify writing
+                        purpose
+                      </div>
+                    </div>
+                    <div class="grade-buttons">
+                      <button class="yellow">Curriculum</button>
+                      <button class="yellow">Sample Exercises</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="grade-card">
+                  <div class="grade-num" id="green">3</div>
+                  <div class="right-content">
+                    <div class="text">
+                      <h3>Third Grade</h3>
+                      <div class="description">
+                        recall details, main idea, learn words by context,
+                        identify writing purpose, basic grammar usage, use
+                        title/content/indices, connect ideas
+                      </div>
+                    </div>
+                    <div class="grade-buttons">
+                      <button class="green">Curriculum</button>
+                      <button class="green">Sample Exercises</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="grade-card">
+                  <div class="grade-num" id="blue">4</div>
+                  <div class="right-content">
+                    <div class="text">
+                      <h3>Fourth Grade</h3>
+                      <div class="description">
+                        basic grammar, recall detail with cues, draw inferences,
+                        use conjunctions, use pronouns,
+                        capitalization/punctuation, draw conclusions
+                      </div>
+                    </div>
+                    <div class="grade-buttons">
+                      <button>Curriculum</button>
+                      <button>Sample Exercises</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="more-grades">
+                  <div class="grade-card">
+                    <div class="grade-num" id="red">5</div>
+                    <div class="right-content">
+                      <div class="text">
+                        <h3>Fifth Grade</h3>
+                        <div class="description">
+                          word root, use apostrophes, basic grammar, summarize
+                          text, recall detail with cues, draw inferences,
+                          distinguish fact and opinion
+                        </div>
+                      </div>
+                      <div class="grade-buttons">
+                        <button class="red">Curriculum</button>
+                        <button class="red">Sample Exercises</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grade-card">
+                    <div class="grade-num" id="yellow">6</div>
+                    <div class="right-content">
+                      <div class="text">
+                        <h3>Sixth Grade</h3>
+                        <div class="description">
+                          recall/locate details, effective/coherent writing with
+                          purpose, capitalization/punctuation, develop
+                          vocabulary through context
+                        </div>
+                      </div>
+                      <div class="grade-buttons">
+                        <button class="yellow">Curriculum</button>
+                        <button class="yellow">Sample Exercises</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grade-card">
+                    <div class="grade-num" id="green">7</div>
+                    <div class="right-content">
+                      <div class="text">
+                        <h3>Seventh Grade</h3>
+                        <div class="description">
+                          connect with conjunctions, recall/locate details, word
+                          meaning/idiom reasoning, standard grammar and usage
+                        </div>
+                      </div>
+                      <div class="grade-buttons">
+                        <button class="green">Curriculum</button>
+                        <button class="green">Sample Exercises</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grade-card">
+                    <div class="grade-num" id="blue">8</div>
+                    <div class="right-content">
+                      <div class="text">
+                        <h3>Eighth Grade</h3>
+                        <div class="description">
+                          conclude main idea, standard grammar and usage, draw
+                          inferences, logical sentence structure, use verb
+                          tenses
+                        </div>
+                      </div>
+                      <div class="grade-buttons">
+                        <button>Curriculum</button>
+                        <button>Sample Exercises</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="toggle" id="toggle"></button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="news-section">
+          <img src="/boy.png" />
+          <div class="news">
+            <h4>Announcements & News for Week 7: February 25 to March 02</h4>
+          </div>
         </section>
       </main>
     </div>
