footer done, just need to do finish last section + nav

--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@
           <div class="section-content">
             <div class="sidebar-content">
               <h2>Programs</h2>
-              <button class="clicked">Language Arts</button>
-              <button>Math</button>
-              <button>Science</button>
-              <button>Computer Science</button>
-              <button>Social Studies</button>
-              <button>Vocabulary</button>
-              <button>GT Math</button>
-              <button>National Competition</button>
+              <ul>
+                <li><button class="clicked">Language Arts</button></li>
+                <li><button>Math</button></li>
+                <li><button>Science</button></li>
+                <li><button>Computer Science</button></li>
+                <li><button>Social Studies</button></li>
+                <li><button>Vocabulary</button></li>
+                <li><button>GT Math</button></li>
+                <li><button>National Competition</button></li>
+              </ul>
             </div>
             <div class="program-content">
               <div class="program-intro">
@@ -242,8 +244,42 @@
           <img src="/boy.png" />
           <div class="news">
             <h4>Announcements & News for Week 7: February 25 to March 02</h4>
+            <div class="cards">
+              <div class="card">Fall 2023 Accuracy Winners</div>
+              <div class="card">Math Problem of the Week</div>
+              <div class="card">Weekly Leaderboard</div>
+            </div>
           </div>
         </section>
+        <footer>
+          <div class="footer-content">
+            <div class="footer-left">
+              <ul>
+                <li><img src="/facebook.svg" /></li>
+                <li><img src="/twitter.svg" /></li>
+                <li><img src="/wechat.svg" /></li>
+              </ul>
+              <div class="links">
+                <a>Terms of Use</a>
+                <a>Privacy Policy</a>
+              </div>
+              <div class="text">
+                © 2003-2024 Beestar Educations, Inc. All Rights Reserved.
+              </div>
+            </div>
+            <div class="footer-right">
+              <ul>
+                <li><img src="/honor_1.webp" /></li>
+                <li><img src="/honor_2.jpeg" /></li>
+                <li><img src="/honor_3.png" /></li>
+                <li><img src="/honor_4.png" /></li>
+                <li><img src="/honor_5.png" /></li>
+                <li><img src="/honor_6.svg" /></li>
+                <li><img src="/honor_7.png" /></li>
+              </ul>
+            </div>
+          </div>
+        </footer>
       </main>
     </div>
     <script type="module" src="/main.js"></script>
