finished content, need to get nav hover + responsiveness working

--- a/index.html
+++ b/index.html
@@ -244,10 +244,49 @@
           <img src="/boy.png" />
           <div class="news">
             <h4>Announcements & News for Week 7: February 25 to March 02</h4>
-            <div class="cards">
-              <div class="card">Fall 2023 Accuracy Winners</div>
-              <div class="card">Math Problem of the Week</div>
-              <div class="card">Weekly Leaderboard</div>
+            <div class="columns">
+              <div class="cards">
+                <div class="news-card">
+                  <div class="news-text">
+                    <div class="title">Fall 2023 Accuracy Winners</div>
+                    <div class="description">
+                      Awards presented to top 8 scorers in each division for
+                      their accuracy.
+                    </div>
+                  </div>
+                  <div class="read-more">
+                    Read more
+                    <button></button>
+                  </div>
+                </div>
+                <div class="news-card">
+                  <div class="news-text">
+                    <div class="title">Math Problem of the Week</div>
+                  </div>
+                  <div class="read-more">
+                    Read more
+                    <button></button>
+                  </div>
+                </div>
+              </div>
+              <div class="cards">
+                <div class="leaderboard-card">
+                  <div class="news-text">
+                    <div class="title">Weekly Leaderboard</div>
+                    <div class="description">Accuracy Standings</div>
+                    <div class="read-more">
+                      Read more
+                      <button></button>
+                    </div>
+                    <hr />
+                    <div class="description">Speed Standings</div>
+                    <div class="read-more">
+                      Read more
+                      <button></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
