--- a/index.html
+++ b/index.html
@@ -17,75 +17,107 @@
             <h2>Beestar</h2>
           </div>
           <div class="buttons">
-            <button>Sign Up</button>
+            <button class="sign-up">Sign Up</button>
             <button>Log In</button>
+            <nav class="nav-hamburg">
+              <div class="hamburger">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul class="menu">
+                  <a href="#"><li>Progressive Learning</li></a>
+                  <a href="#"><li>National Competition</li></a>
+                  <a href="#"><li>Resources</li></a>
+                  <a href="#"><li>About</li></a>
+                  <a href="#"><li>High School</li></a>
+                </ul>
+              </div>
+            </nav>
           </div>
         </div>
-        <nav>
-          <ul class="nav-links">
-            <li>
-              <a
-                >Progressive Learning
-                <img src="/nav_down.svg" />
-              </a>
-            </li>
-            <li>
-              <a>
-                National Competition
-                <img src="/nav_down.svg" />
-              </a>
-            </li>
-            <li>
-              <a>
-                Resources
-                <img src="/nav_down.svg" />
-              </a>
-            </li>
-            <li>
-              <a>
-                About
-                <img src="/nav_down.svg" />
-              </a>
-            </li>
-            <a>
-              <li>High School</li>
-            </a>
-          </ul>
-        </nav>
       </header>
+      <nav class="nav-bar">
+        <ul class="nav-links">
+          <li>
+            <a
+              >Progressive Learning
+              <img src="/nav_down.svg" />
+            </a>
+          </li>
+          <li>
+            <a>
+              National Competition
+              <img src="/nav_down.svg" />
+            </a>
+          </li>
+          <li>
+            <a>
+              Resources
+              <img src="/nav_down.svg" />
+            </a>
+          </li>
+          <li>
+            <a>
+              About
+              <img src="/nav_down.svg" />
+            </a>
+          </li>
+          <a class="high-school">
+            <li>High School</li>
+          </a>
+        </ul>
+      </nav>
       <main class="content">
+        <section class="welcome-section-mobile">
+          <img src="/main-mobile.png" class="mobile-image" />
+          <div class="intro-content">
+            <div class="text">
+              <h1>Premier school enrichment program for K-12</h1>
+              <div class="beestar-intro">
+                Beestar helps thousands of students achieve outstanding grades
+                using its programs for just 20 minutes a week.
+              </div>
+            </div>
+            <button class="tablet-button">
+              Register now
+              <img src="/right_arrow.svg" />
+            </button>
+          </div>
+        </section>
         <section class="welcome-section">
           <div class="intro">
             <div class="intro-content">
               <h1>The premier after-school enrichment program for K-12</h1>
-              <div>
+              <div class="beestar-intro">
                 Beestar helps thousands of students achieve outstanding grades
                 using its curriculum-based programs for just 20 minutes a week.
               </div>
-              <button>
+              <button class="computer-button">
                 Spring 2024 programs are open!
                 <img src="/right_arrow.svg" />
               </button>
             </div>
           </div>
-          <img src="/main.png" class="main-image" />
+          <img src="/welcome.png" class="main-image" />
+          <img src="/welcome_tablet.jpeg" class="tablet-image" />
         </section>
         <section class="program-section">
-          <div class="sidebar-bg"></div>
-          <div class="program-bg"></div>
           <div class="section-content">
             <div class="sidebar-content">
               <h2>Programs</h2>
-              <ul>
-                <li><button class="clicked">Language Arts</button></li>
-                <li><button>Math</button></li>
-                <li><button>Science</button></li>
-                <li><button>Computer Science</button></li>
-                <li><button>Social Studies</button></li>
-                <li><button>Vocabulary</button></li>
-                <li><button>GT Math</button></li>
-                <li><button>National Competition</button></li>
-              </ul>
+              <div class="program-scroll">
+                <ul>
+                  <li><button class="clicked">Language Arts</button></li>
+                  <li><button>Math</button></li>
+                  <li><button>Science</button></li>
+                  <li><button>Computer Science</button></li>
+                  <li><button>Social Studies</button></li>
+                  <li><button>Vocabulary</button></li>
+                  <li><button>GT Math</button></li>
+                  <li><button>National Competition</button></li>
+                </ul>
+              </div>
             </div>
             <div class="program-content">
               <div class="program-intro">
@@ -105,8 +137,7 @@
                       <h3>First Grade</h3>
                       <div class="description">
                         use simple words, infer from text, recall details,
-                        understand words by context, identify beginning and
-                        ending sound
+                        understand words by context, distinguish rhyming words
                       </div>
                     </div>
                     <div class="grade-buttons">
@@ -121,9 +152,8 @@
                     <div class="text">
                       <h3>Second Grade</h3>
                       <div class="description">
-                        recall details, compose sentences, basic grammar usage,
-                        match word sounds, support conclusions, identify writing
-                        purpose
+                        recall details, basic grammar usage, compose sentences,
+                        match word sounds, support conclusions, identify purpose
                       </div>
                     </div>
                     <div class="grade-buttons">
@@ -139,8 +169,8 @@
                       <h3>Third Grade</h3>
                       <div class="description">
                         recall details, main idea, learn words by context,
-                        identify writing purpose, basic grammar usage, use
-                        title/content/indices, connect ideas
+                        identify writing purpose, basic grammar usage, connect
+                        ideas
                       </div>
                     </div>
                     <div class="grade-buttons">
@@ -155,9 +185,8 @@
                     <div class="text">
                       <h3>Fourth Grade</h3>
                       <div class="description">
-                        basic grammar, recall detail with cues, draw inferences,
-                        use conjunctions, use pronouns,
-                        capitalization/punctuation, draw conclusions
+                        basic grammar, draw inferences, use conjunctions, use
+                        pronouns, capitalization, punctuation, draw conclusions
                       </div>
                     </div>
                     <div class="grade-buttons">
@@ -190,9 +219,9 @@
                       <div class="text">
                         <h3>Sixth Grade</h3>
                         <div class="description">
-                          recall/locate details, effective/coherent writing with
-                          purpose, capitalization/punctuation, develop
-                          vocabulary through context
+                          recall/locate details, writing with purpose,
+                          capitalization, punctuation, develop vocabulary
+                          through context
                         </div>
                       </div>
                       <div class="grade-buttons">
@@ -241,9 +270,46 @@
           </div>
         </section>
         <section class="news-section">
-          <img src="/boy.png" />
+          <img src="/boy.png" class="boy-img" />
           <div class="news">
             <h4>Announcements & News for Week 7: February 25 to March 02</h4>
+            <div class="single-col">
+              <div class="news-card">
+                <div class="news-text">
+                  <div class="title">Fall 2023 Accuracy Winners</div>
+                  <div class="description">
+                    Awards presented to top 8 scorers in each division for their
+                    accuracy.
+                  </div>
+                </div>
+                <div class="read-more">
+                  Read more
+                  <button></button>
+                </div>
+              </div>
+              <div class="news-card">
+                <div class="news-text">
+                  <div class="title">Math Problem of the Week</div>
+                </div>
+                <div class="read-more">
+                  Read more
+                  <button></button>
+                </div>
+              </div>
+              <div class="news-card">
+                <div class="news-text">
+                  <div class="title">Fall 2023 Accuracy Winners</div>
+                  <div class="description">
+                    Awards presented to top 8 scorers in each division for their
+                    accuracy.
+                  </div>
+                </div>
+                <div class="read-more">
+                  Read more
+                  <button></button>
+                </div>
+              </div>
+            </div>
             <div class="columns">
               <div class="cards">
                 <div class="news-card">
