--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
           <li>
             <a
               >Progressive Learning
-              <img src="/nav_down.svg" />
+              <img src="/nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <li>
             <a>
               National Competition
-              <img src="/nav_down.svg" />
+              <img src="/nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <li>
             <a>
               Resources
-              <img src="/nav_down.svg" />
+              <img src="/nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <li>
             <a>
               About
-              <img src="/nav_down.svg" />
+              <img src="/nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <a class="high-school">
@@ -70,7 +70,11 @@
       </nav>
       <main class="content">
         <section class="welcome-section-mobile">
-          <img src="/main-mobile.png" class="mobile-image" />
+          <img
+            src="/main-mobile.png"
+            class="mobile-image"
+            alt="image of mother and children learning together"
+          />
           <div class="intro-content">
             <div class="text">
               <h1>Premier school enrichment program for K-12</h1>
@@ -81,7 +85,7 @@
             </div>
             <button class="tablet-button">
               Register now
-              <img src="/right_arrow.svg" />
+              <img src="/right_arrow.svg" alt="arrow pointing right" />
             </button>
           </div>
         </section>
@@ -95,12 +99,20 @@
               </div>
               <button class="computer-button">
                 Spring 2024 programs are open!
-                <img src="/right_arrow.svg" />
+                <img src="/right_arrow.svg" alt="arrow pointing right" />
               </button>
             </div>
           </div>
-          <img src="/welcome.png" class="main-image" />
-          <img src="/welcome_tablet.jpeg" class="tablet-image" />
+          <img
+            src="/welcome.png"
+            class="main-image"
+            alt="image of mother and children learning together"
+          />
+          <img
+            src="/welcome_tablet.jpeg"
+            class="tablet-image"
+            alt="image of mother and children learning together"
+          />
         </section>
         <section class="program-section">
           <div class="section-content">
@@ -270,7 +282,11 @@
           </div>
         </section>
         <section class="news-section">
-          <img src="/boy.png" class="boy-img" />
+          <img
+            src="/boy.png"
+            class="boy-img"
+            alt="image of boy learning on laptop"
+          />
           <div class="news">
             <h4>Announcements & News for Week 7: February 25 to March 02</h4>
             <div class="single-col">
@@ -360,9 +376,15 @@
           <div class="footer-content">
             <div class="footer-left">
               <ul>
-                <li><img src="/facebook.svg" /></li>
-                <li><img src="/twitter.svg" /></li>
-                <li><img src="/wechat.svg" /></li>
+                <li>
+                  <img src="/facebook.svg" alt="facebook social media icon" />
+                </li>
+                <li>
+                  <img src="/twitter.svg" alt="twitter social media icon" />
+                </li>
+                <li>
+                  <img src="/wechat.svg" alt="wechat social media icon" />
+                </li>
               </ul>
               <div class="links">
                 <a>Terms of Use</a>
@@ -374,13 +396,40 @@
             </div>
             <div class="footer-right">
               <ul>
-                <li><img src="/honor_1.webp" /></li>
-                <li><img src="/honor_2.jpeg" /></li>
-                <li><img src="/honor_3.png" /></li>
-                <li><img src="/honor_4.png" /></li>
-                <li><img src="/honor_5.png" /></li>
-                <li><img src="/honor_6.svg" /></li>
-                <li><img src="/honor_7.png" /></li>
+                <li>
+                  <img
+                    src="/honor_1.webp"
+                    alt="top 100 educational website award in 2017"
+                  />
+                </li>
+                <li><img src="/honor_2.jpeg" alt="mom's choice award" /></li>
+                <li>
+                  <img
+                    src="/honor_3.png"
+                    alt="homeschool seal of approval award 2017"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="/honor_4.png"
+                    alt="ultimate homeschool curriculum list award"
+                  />
+                </li>
+                <li>
+                  <img src="/honor_5.png" alt="homeschool buyers co-op honor" />
+                </li>
+                <li>
+                  <img
+                    src="/honor_6.svg"
+                    alt="affiliated with art of problem solving"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="/honor_7.png"
+                    alt="affiliated with national council of teachers of mathematics"
+                  />
+                </li>
               </ul>
             </div>
           </div>
