--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <div class="logo-buttons">
           <div class="logo">
-            <img src="/logo.png" alt="beestar site logo" />
+            <img src="logo.png" alt="beestar site logo" />
             <h2>Beestar</h2>
           </div>
           <div class="buttons">
@@ -42,25 +42,25 @@
           <li>
             <a
               >Progressive Learning
-              <img src="/nav_down.svg" alt="drop down arrow" />
+              <img src="nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <li>
             <a>
               National Competition
-              <img src="/nav_down.svg" alt="drop down arrow" />
+              <img src="nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <li>
             <a>
               Resources
-              <img src="/nav_down.svg" alt="drop down arrow" />
+              <img src="nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <li>
             <a>
               About
-              <img src="/nav_down.svg" alt="drop down arrow" />
+              <img src="nav_down.svg" alt="drop down arrow" />
             </a>
           </li>
           <a class="high-school">
@@ -71,7 +71,7 @@
       <main class="content">
         <section class="welcome-section-mobile">
           <img
-            src="/main-mobile.png"
+            src="main-mobile.png"
             class="mobile-image"
             alt="image of mother and children learning together"
           />
@@ -85,7 +85,7 @@
             </div>
             <button class="tablet-button">
               Register now
-              <img src="/right_arrow.svg" alt="arrow pointing right" />
+              <img src="right_arrow.svg" alt="arrow pointing right" />
             </button>
           </div>
         </section>
@@ -99,17 +99,17 @@
               </div>
               <button class="computer-button">
                 Spring 2024 programs are open!
-                <img src="/right_arrow.svg" alt="arrow pointing right" />
+                <img src="right_arrow.svg" alt="arrow pointing right" />
               </button>
             </div>
           </div>
           <img
-            src="/welcome.png"
+            src="welcome.png"
             class="main-image"
             alt="image of mother and children learning together"
           />
           <img
-            src="/welcome_tablet.jpeg"
+            src="welcome_tablet.jpeg"
             class="tablet-image"
             alt="image of mother and children learning together"
           />
@@ -283,7 +283,7 @@
         </section>
         <section class="news-section">
           <img
-            src="/boy.png"
+            src="boy.png"
             class="boy-img"
             alt="image of boy learning on laptop"
           />
@@ -377,13 +377,13 @@
             <div class="footer-left">
               <ul>
                 <li>
-                  <img src="/facebook.svg" alt="facebook social media icon" />
+                  <img src="facebook.svg" alt="facebook social media icon" />
                 </li>
                 <li>
-                  <img src="/twitter.svg" alt="twitter social media icon" />
+                  <img src="twitter.svg" alt="twitter social media icon" />
                 </li>
                 <li>
-                  <img src="/wechat.svg" alt="wechat social media icon" />
+                  <img src="wechat.svg" alt="wechat social media icon" />
                 </li>
               </ul>
               <div class="links">
@@ -398,35 +398,35 @@
               <ul>
                 <li>
                   <img
-                    src="/honor_1.webp"
+                    src="honor_1.webp"
                     alt="top 100 educational website award in 2017"
                   />
                 </li>
-                <li><img src="/honor_2.jpeg" alt="mom's choice award" /></li>
+                <li><img src="honor_2.jpeg" alt="mom's choice award" /></li>
                 <li>
                   <img
-                    src="/honor_3.png"
+                    src="honor_3.png"
                     alt="homeschool seal of approval award 2017"
                   />
                 </li>
                 <li>
                   <img
-                    src="/honor_4.png"
+                    src="honor_4.png"
                     alt="ultimate homeschool curriculum list award"
                   />
                 </li>
                 <li>
-                  <img src="/honor_5.png" alt="homeschool buyers co-op honor" />
+                  <img src="honor_5.png" alt="homeschool buyers co-op honor" />
                 </li>
                 <li>
                   <img
-                    src="/honor_6.svg"
+                    src="honor_6.svg"
                     alt="affiliated with art of problem solving"
                   />
                 </li>
                 <li>
                   <img
-                    src="/honor_7.png"
+                    src="honor_7.png"
                     alt="affiliated with national council of teachers of mathematics"
                   />
                 </li>
