--- a/index.html
+++ b/index.html
@@ -404,35 +404,38 @@
               <ul>
                 <li>
                   <img
-                    src="/honor_1.webp"
+                    src="public/honor_1.webp"
                     alt="top 100 educational website award in 2017"
                   />
                 </li>
                 <li><img src="/honor_2.jpeg" alt="mom's choice award" /></li>
                 <li>
                   <img
-                    src="/honor_3.png"
+                    src="public/honor_3.png"
                     alt="homeschool seal of approval award 2017"
                   />
                 </li>
                 <li>
                   <img
-                    src="/honor_4.png"
+                    src="public/honor_4.png"
                     alt="ultimate homeschool curriculum list award"
                   />
                 </li>
                 <li>
-                  <img src="/honor_5.png" alt="homeschool buyers co-op honor" />
+                  <img
+                    src="public/honor_5.png"
+                    alt="homeschool buyers co-op honor"
+                  />
                 </li>
                 <li>
                   <img
-                    src="/honor_6.svg"
+                    src="public/honor_6.svg"
                     alt="affiliated with art of problem solving"
                   />
                 </li>
                 <li>
                   <img
-                    src="/honor_7.png"
+                    src="public/honor_7.png"
                     alt="affiliated with national council of teachers of mathematics"
                   />
                 </li>
