--- a/index.html
+++ b/index.html
@@ -408,7 +408,9 @@
                     alt="top 100 educational website award in 2017"
                   />
                 </li>
-                <li><img src="/honor_2.jpeg" alt="mom's choice award" /></li>
+                <li>
+                  <img src="public/honor_2.jpeg" alt="mom's choice award" />
+                </li>
                 <li>
                   <img
                     src="public/honor_3.png"
