--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="public/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/fpj1mes.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beestar.org - Redesign</title>
