--- a/index.html
+++ b/index.html
@@ -447,6 +447,6 @@
         </footer>
       </main>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="application/javascript" src="/main.js"></script>
   </body>
 </html>
