--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <header>
         <div class="logo-buttons">
           <div class="logo">
-            <img src="/assets/logo-BX2jfmpQ.png" alt="beestar site logo" />
+            <img
+              src="beestar-responsive-redesign/public/logo.png"
+              alt="beestar site logo"
+            />
             <h2>Beestar</h2>
           </div>
           <div class="buttons">
