--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img
             src="/assets/main-mobile-7P9szMJR.png"
             class="mobile-image"
-            alt="image of mother and children learning together"
+            alt="supporting image of parent and children learning"
           />
           <div class="intro-content">
             <div class="text">
@@ -109,12 +109,12 @@
           <img
             src="/assets/welcome-LIiJfRES.png"
             class="main-image"
-            alt="image of mother and children learning together"
+            alt="isupporting image of parent and children learning"
           />
           <img
             src="/assets/welcome_tablet-nf5EDUv7.jpeg"
             class="tablet-image"
-            alt="image of mother and children learning together"
+            alt="supporting image of parent and children learning"
           />
         </section>
         <section class="program-section">
@@ -288,7 +288,7 @@
           <img
             src="/assets/boy-CZxzrEjk.png"
             class="boy-img"
-            alt="image of boy learning on laptop"
+            alt="supporting image of a child learning"
           />
           <div class="news">
             <h4>Announcements & News for Week 7: February 25 to March 02</h4>
