--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <link rel="stylesheet" href="https://use.typekit.net/fpj1mes.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beestar.org - Redesign</title>
-    <link rel="stylesheet" href="/beestar-responsive-redesign/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="app">
       <header>
         <div class="logo-buttons">
           <div class="logo">
-            <img
-              src="/beestar-responsive-redesign/public/logo.png"
-              alt="beestar site logo"
-            />
+            <img src="public/logo.png" alt="beestar site logo" />
             <h2>Beestar</h2>
           </div>
           <div class="buttons">
@@ -288,7 +285,7 @@
           <img
             src="public/boy.png"
             class="boy-img"
-            alt="supporting image of a child learning"
+            alt="supporting image of child learning"
           />
           <div class="news">
             <h4>Announcements & News for Week 7: February 25 to March 02</h4>
