--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <section class="program-section">
           <div class="section-content">
             <div class="sidebar-content">
-              <h2>Programs</h2>
+              <h2 class="programs-header">Programs</h2>
               <div class="program-scroll">
                 <ul>
                   <li><button class="clicked">Language Arts</button></li>
@@ -133,7 +133,7 @@
             </div>
             <div class="program-content">
               <div class="program-intro">
-                <h1>Language Arts</h1>
+                <h2>Language Arts</h2>
                 <div class="description">
                   Through Beestar's ELA program, students will be provided with
                   a comprehensive and structured approach to developing language
@@ -447,6 +447,6 @@
         </footer>
       </main>
     </div>
-    <script type="application/javascript" src="/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
