--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           />
           <div class="intro-content">
             <div class="text">
-              <h1>Premier school enrichment program for K-12</h1>
+              <h1>The premier after-school enrichment program for K-12</h1>
               <div class="beestar-intro">
                 Beestar helps thousands of students achieve outstanding grades
                 using its programs for just 20 minutes a week.
